--- a/templates/index.html
+++ b/templates/index.html
@@ -14,11 +14,11 @@
         <div class="chat-area">
             
             <div class="chat-history">
-                <h1 id="main-title" class="center-title">Academic Affairs QA System
+                <h1 id="main-title" class="center-title">Student Affairs QA System
                 <br>
                 ----------------------------------------------
                 <br>
-                <span class="subtitle">Ask Anytime, Solve Anywhere</span>
+                <span class="subtitle">Answers You Need, Support You Trust</span>
             </h1>
             </div>
 
